# WorkoutBot

./: CMakeLists.txt  README.md  main.cpp
bot/: workoutbot.cpp  workoutbot.h
chart/: chart.cpp  chart.h
db/: dbhandler.cpp  dbhandler.h
parser/: parser.cpp  parser.h
